// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render Unknown View with viewName 1`] = `
<div>
  <div
    className="row"
  >
    <div
      className="col-xs-12 col-sm-8 col-md-8 col-lg-9"
    />
    <div
      className="col-xs-12 col-sm-4 col-md-4 col-lg-3"
    />
  </div>
  <div
    className="container"
  >
    <h1>
      The wanted view "Test" is unknown
    </h1>
    <p>
      Report this message to the administrator
    </p>
  </div>
</div>
`;

exports[`Render Unknown View with viewType 1`] = `
<div>
  <div
    className="row"
  >
    <div
      className="col-xs-12 col-sm-8 col-md-8 col-lg-9"
    />
    <div
      className="col-xs-12 col-sm-4 col-md-4 col-lg-3"
    />
  </div>
  <div
    className="container"
  >
    <h1>
      The wanted view "Test" is unknown
    </h1>
    <p>
      Report this message to the administrator
    </p>
  </div>
</div>
`;

exports[`Unknown Icon for standard view is in the plugin 1`] = `
<svg
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  style={
    Object {
      "MozUserSelect": "none",
      "WebkitTransition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
      "WebkitUserSelect": "none",
      "color": "rgba(0, 0, 0, 0.87)",
      "display": "inline-block",
      "fill": "currentColor",
      "height": 24,
      "msUserSelect": "none",
      "muiPrepared": true,
      "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
      "userSelect": "none",
      "width": 24,
    }
  }
  viewBox="0 0 24 24"
>
  <path
    d="M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z"
  />
</svg>
`;

exports[`getClientView with Login view 1`] = `
<div
  className="container"
>
  <div
    className="col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3 col-lg-6 col-lg-offset-3"
  >
    <div
      className={undefined}
      style={
        Object {
          "MozBoxSizing": "border-box",
          "WebkitTapHighlightColor": "rgba(0,0,0,0)",
          "WebkitTransition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
          "backgroundColor": "#ffffff",
          "borderRadius": 2,
          "boxShadow": "0 1px 6px rgba(0, 0, 0, 0.12),
                 0 1px 4px rgba(0, 0, 0, 0.12)",
          "boxSizing": "border-box",
          "color": "rgba(0, 0, 0, 0.87)",
          "display": "inline-block",
          "fontFamily": "Roboto, sans-serif",
          "marginTop": 100,
          "minWidth": "100%",
          "muiPrepared": true,
          "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
        }
      }
    >
      <button
        disabled={false}
        href={undefined}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchStart={[Function]}
        onTouchTap={[Function]}
        style={
          Object {
            "MozBoxSizing": "border-box",
            "WebkitTapHighlightColor": "rgba(0, 0, 0, 0)",
            "WebkitTransition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
            "backgroundColor": "#00bcd4",
            "border": 10,
            "borderRadius": 2,
            "boxSizing": "border-box",
            "cursor": "pointer",
            "display": "inline-block",
            "fontFamily": "Roboto, sans-serif",
            "fontSize": "inherit",
            "fontWeight": "inherit",
            "height": 36,
            "lineHeight": "36px",
            "margin": 0,
            "muiPrepared": true,
            "outline": "none",
            "padding": 0,
            "position": "relative",
            "textAlign": "center",
            "textDecoration": "none",
            "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
            "verticalAlign": null,
            "width": "100%",
            "zIndex": 1,
          }
        }
        tabIndex={0}
        type="button"
      >
        <div
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
        >
          <div
            style={
              Object {
                "WebkitTransition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                "backgroundColor": false,
                "borderRadius": 2,
                "height": 36,
                "muiPrepared": true,
                "top": 0,
                "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
              }
            }
          >
            <span
              style={
                Object {
                  "MozUserSelect": "none",
                  "WebkitUserSelect": "none",
                  "color": "#ffffff",
                  "fontSize": 14,
                  "fontWeight": 500,
                  "letterSpacing": 0,
                  "margin": 0,
                  "msUserSelect": "none",
                  "muiPrepared": true,
                  "opacity": 1,
                  "paddingLeft": 16,
                  "paddingRight": 16,
                  "position": "relative",
                  "textTransform": "uppercase",
                  "userSelect": "none",
                }
              }
            >
              Login
            </span>
          </div>
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`getClientView with unknown view 1`] = `
<div>
  <div
    className="row"
  >
    <div
      className="col-xs-12 col-sm-8 col-md-8 col-lg-9"
    />
    <div
      className="col-xs-12 col-sm-4 col-md-4 col-lg-3"
    />
  </div>
  <div
    className="container"
  >
    <h1>
      The wanted view "Unknown" is unknown
    </h1>
    <p>
      Report this message to the administrator
    </p>
  </div>
</div>
`;

exports[`getView with Unknown view 1`] = `
<div
  style={
    Object {
      "margin": 20,
    }
  }
>
  <div>
    <div
      className="row"
    >
      <div
        className="col-xs-12 col-sm-8 col-md-8 col-lg-9"
      />
      <div
        className="col-xs-12 col-sm-4 col-md-4 col-lg-3"
      />
    </div>
    <div
      className="container"
    >
      <h1>
        The wanted view "Unknown" is unknown
      </h1>
      <p>
        Report this message to the administrator
      </p>
    </div>
  </div>
</div>
`;

exports[`getViewIcon with List view 1`] = `
<button
  disabled={false}
  href={undefined}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseOut={[Function]}
  onTouchStart={[Function]}
  onTouchTap={[Function]}
  style={
    Object {
      "MozBoxSizing": "border-box",
      "WebkitTapHighlightColor": "rgba(0, 0, 0, 0)",
      "WebkitTransition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
      "background": "none",
      "border": 10,
      "boxSizing": "border-box",
      "cursor": "pointer",
      "display": "inline-block",
      "fontFamily": "Roboto, sans-serif",
      "fontSize": 0,
      "fontWeight": "inherit",
      "height": 36,
      "margin": 0,
      "muiPrepared": true,
      "outline": "none",
      "overflow": "visible",
      "padding": 2,
      "position": "relative",
      "textDecoration": "none",
      "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
      "verticalAlign": null,
      "width": 36,
      "zIndex": 1,
    }
  }
  tabIndex={0}
  type="button"
>
  <div
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchStart={[Function]}
  >
    <svg
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      style={
        Object {
          "MozUserSelect": "none",
          "WebkitTransition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
          "WebkitUserSelect": "none",
          "color": "rgba(0, 0, 0, 0.87)",
          "display": "inline-block",
          "fill": "currentColor",
          "height": 24,
          "msUserSelect": "none",
          "muiPrepared": true,
          "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
          "userSelect": "none",
          "width": 24,
        }
      }
      viewBox="0 0 24 24"
    >
      <path
        d="M4 14h4v-4H4v4zm0 5h4v-4H4v4zM4 9h4V5H4v4zm5 5h12v-4H9v4zm0 5h12v-4H9v4zM9 5v4h12V5H9z"
      />
    </svg>
    ;
  </div>
</button>
`;

exports[`getViewIcon with unknown view 1`] = `
<button
  disabled={false}
  href={undefined}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseOut={[Function]}
  onTouchStart={[Function]}
  onTouchTap={[Function]}
  style={
    Object {
      "MozBoxSizing": "border-box",
      "WebkitTapHighlightColor": "rgba(0, 0, 0, 0)",
      "WebkitTransition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
      "background": "none",
      "border": 10,
      "boxSizing": "border-box",
      "cursor": "pointer",
      "display": "inline-block",
      "fontFamily": "Roboto, sans-serif",
      "fontSize": 0,
      "fontWeight": "inherit",
      "height": 36,
      "margin": 0,
      "muiPrepared": true,
      "outline": "none",
      "overflow": "visible",
      "padding": 2,
      "position": "relative",
      "textDecoration": "none",
      "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
      "verticalAlign": null,
      "width": 36,
      "zIndex": 1,
    }
  }
  tabIndex={0}
  type="button"
>
  <div
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchStart={[Function]}
  >
    <svg
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      style={
        Object {
          "MozUserSelect": "none",
          "WebkitTransition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
          "WebkitUserSelect": "none",
          "color": "rgba(0, 0, 0, 0.87)",
          "display": "inline-block",
          "fill": "currentColor",
          "height": 24,
          "msUserSelect": "none",
          "muiPrepared": true,
          "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
          "userSelect": "none",
          "width": 24,
        }
      }
      viewBox="0 0 24 24"
    >
      <path
        d="M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z"
      />
    </svg>
    ;
  </div>
</button>
`;
